@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Fix crash when unloading the arcfour module. (caf)
+
 * Change add_dcc_bind() to collect all function pointer arguments into a
   single struct. (caf)
 
